k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energy-transmission-web
  namespace: energy-transmission
  labels:
    app: energy-transmission-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: energy-transmission-web
  template:
    metadata:
      labels:
        app: energy-transmission-web
    spec:
      containers:
        - name: energy-transmission-web
          image: 605383993555.dkr.ecr.us-east-1.amazonaws.com/energy-transmission-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
